--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,72 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/yuls/workspace/fullstack-gpt/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Downloading config.json: 100%|██████████| 665/665 [00:00<00:00, 1.24MB/s]\n",
+      "Downloading vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 1.84MB/s]\n",
+      "Downloading merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 1.31MB/s]\n",
+      "Downloading tokenizer.json: 100%|██████████| 1.36M/1.36M [00:00<00:00, 1.88MB/s]\n",
+      "Downloading model.safetensors: 100%|██████████| 548M/548M [02:05<00:00, 4.37MB/s] \n",
+      "Downloading generation_config.json: 100%|██████████| 124/124 [00:00<00:00, 490kB/s]\n",
+      "Using pad_token, but it is not set yet.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'?\\n\\nPotato is a starchy, tuberous crop from the perennial Solanum tuberosum of the Solanaceae family. The word potato may refer to the plant itself as well as the edible tuber. In the region of the Andes, there are some other closely related cultivated potato species.\\n\\nWhat is the meaning of potato in English?\\n\\nPotato is a starchy, tuberous crop from the perennial Solanum tuberosum of the Solanaceae family. The word potato may refer to the plant itself as well as the edible tuber. In the region of the Andes, there are some other closely related cultivated potato species.\\n\\nWhat is the meaning of potato in Hindi?\\n\\nPotato is a starchy, tuberous crop from the perennial Solanum tuberosum of the Solanaceae family. The word potato may refer to the plant itself as well as the edible tuber. In the region of the Andes, there are some other closely related cultivated potato species.\\n\\nWhat is the meaning of potato in Telugu?\\n'"
+       "' very poor nutrition and so is sugar. But potatoes are still very healthy! If you want to make soup, give your kids the recipe for \"The Little Bunch of Soup.\" But the trick is to cook for all their own needs.\\n\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.llms import HuggingFaceHub\n",
+    "from langchain.llms.huggingface_pipeline import HuggingFacePipeline\n",
     "from langchain.prompts import PromptTemplate\n",
     "\n",
-    "prompt = PromptTemplate.from_template(\"What is the meaning of {word}\")\n",
+    "prompt = PromptTemplate.from_template(\"A {word} is a\")\n",
     "\n",
-    "llm = HuggingFaceHub(\n",
-    "  repo_id=\"mistralai/Mistral-7B-v0.1\",\n",
-    "  model_kwargs={\n",
-    "    \"max_new_tokens\": 250,\n",
-    "  },\n",
-    ")\n",
-    "\n",
-    "chain = prompt | llm\n",
-    "\n",
-    "chain.invoke({\n",
-    "  \"word\": \"potato\"\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Potato is a starchy vegetable that is grown underground in rows in a shallow, well-drained soil. It is a tuber, which means it is an underground, fleshy part of the plant that stores nutrients. Potatoes are a popular food source and are used in many different dishes, including salads, soups, stews, and baked dishes. They are also used as a source of starch for making paper and other products. Potatoes are high in carbohydrates and are a good source of fiber, vitamin C, and potassium.'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prompt = PromptTemplate.from_template(\"[INST]What is the meaning of {word}[/INST]\")\n",
-    "\n",
-    "llm = HuggingFaceHub(\n",
-    "  repo_id=\"mistralai/Mistral-7B-Instruct-v0.1\",\n",
-    "  model_kwargs={\n",
-    "    \"max_new_tokens\": 250,\n",
-    "  },\n",
+    "llm = HuggingFacePipeline.from_model_id(\n",
+    "  model_id=\"gpt2\",\n",
+    "  task=\"text-generation\",\n",
+    "  pipeline_kwargs={\n",
+    "    \"max_new_tokens\": 50\n",
+    "  }\n",
     ")\n",
     "\n",
     "chain = prompt | llm\n",
