--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,188 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "def get_weather(lon, lat):\n",
-    "  print(\"call an api to get weather info\")\n",
-    "\n",
-    "function = {\n",
-    "  \"name\": \"get_weather\",\n",
-    "  \"description\": \"function that takes longitude and latitude to find the weather of a place\",\n",
-    "  \"parameters\": {\n",
-    "    \"type\": \"object\",\n",
-    "    \"properties\": {\n",
-    "      \"lon\": {\"type\": \"string\", \"description\": \"The longitude coordinate\"},\n",
-    "      \"lat\": {\"type\": \"string\", \"description\": \"The latitude coordinate\"},\n",
-    "    },\n",
-    "  },\n",
-    "  \"required\": [\"lon\", \"lat\"],\n",
-    "}\n",
-    "\n",
-    "llm = ChatOpenAI(temperature=0.1).bind(function_call=\"auto\", functions=[function])\n",
-    "prompt = PromptTemplate.from_template(\"What is the weather in {city}\")\n",
-    "\n",
-    "chain = prompt | llm\n",
-    "\n",
-    "response = chain.invoke({\n",
-    "  \"city\": \"Seoul\"\n",
-    "})\n",
-    "\n",
-    "response = response.additional_kwargs[\"function_call\"][\"arguments\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "call an api to get weather info\n"
+      "ffmpeg version 6.0 Copyright (c) 2000-2023 the FFmpeg developers\n",
+      "  built with Apple clang version 15.0.0 (clang-1500.0.40.1)\n",
+      "  configuration: --prefix=/opt/homebrew/Cellar/ffmpeg/6.0_1 --enable-shared --enable-pthreads --enable-version3 --cc=clang --host-cflags= --host-ldflags='-Wl,-ld_classic' --enable-ffplay --enable-gnutls --enable-gpl --enable-libaom --enable-libaribb24 --enable-libbluray --enable-libdav1d --enable-libjxl --enable-libmp3lame --enable-libopus --enable-librav1e --enable-librist --enable-librubberband --enable-libsnappy --enable-libsrt --enable-libsvtav1 --enable-libtesseract --enable-libtheora --enable-libvidstab --enable-libvmaf --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libxvid --enable-lzma --enable-libfontconfig --enable-libfreetype --enable-frei0r --enable-libass --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libspeex --enable-libsoxr --enable-libzmq --enable-libzimg --disable-libjack --disable-indev=jack --enable-videotoolbox --enable-audiotoolbox --enable-neon\n",
+      "  libavutil      58.  2.100 / 58.  2.100\n",
+      "  libavcodec     60.  3.100 / 60.  3.100\n",
+      "  libavformat    60.  3.100 / 60.  3.100\n",
+      "  libavdevice    60.  1.100 / 60.  1.100\n",
+      "  libavfilter     9.  3.100 /  9.  3.100\n",
+      "  libswscale      7.  1.100 /  7.  1.100\n",
+      "  libswresample   4. 10.100 /  4. 10.100\n",
+      "  libpostproc    57.  1.100 / 57.  1.100\n",
+      "Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'files/video.mp4':\n",
+      "  Metadata:\n",
+      "    major_brand     : mp42\n",
+      "    minor_version   : 0\n",
+      "    compatible_brands: isommp42\n",
+      "    creation_time   : 2023-08-16T08:47:43.000000Z\n",
+      "  Duration: 01:14:28.36, start: 0.000000, bitrate: 181 kb/s\n",
+      "  Stream #0:0[0x1](und): Video: h264 (Main) (avc1 / 0x31637661), yuv420p(tv, bt709, progressive), 640x360 [SAR 1:1 DAR 16:9], 49 kb/s, 30 fps, 30 tbr, 15360 tbn (default)\n",
+      "    Metadata:\n",
+      "      creation_time   : 2023-08-16T08:47:43.000000Z\n",
+      "      handler_name    : ISO Media file produced by Google Inc. Created on: 08/16/2023.\n",
+      "      vendor_id       : [0][0][0][0]\n",
+      "  Stream #0:1[0x2](und): Audio: aac (LC) (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 127 kb/s (default)\n",
+      "    Metadata:\n",
+      "      creation_time   : 2023-08-16T08:47:43.000000Z\n",
+      "      handler_name    : ISO Media file produced by Google Inc. Created on: 08/16/2023.\n",
+      "      vendor_id       : [0][0][0][0]\n",
+      "Stream mapping:\n",
+      "  Stream #0:1 -> #0:0 (aac (native) -> mp3 (libmp3lame))\n",
+      "Press [q] to stop, [?] for help\n",
+      "Output #0, mp3, to 'files/audio.mp3':\n",
+      "  Metadata:\n",
+      "    major_brand     : mp42\n",
+      "    minor_version   : 0\n",
+      "    compatible_brands: isommp42\n",
+      "    TSSE            : Lavf60.3.100\n",
+      "  Stream #0:0(und): Audio: mp3, 44100 Hz, stereo, fltp (default)\n",
+      "    Metadata:\n",
+      "      creation_time   : 2023-08-16T08:47:43.000000Z\n",
+      "      handler_name    : ISO Media file produced by Google Inc. Created on: 08/16/2023.\n",
+      "      vendor_id       : [0][0][0][0]\n",
+      "      encoder         : Lavc60.3.100 libmp3lame\n",
+      "size=   69819kB time=01:14:28.35 bitrate= 128.0kbits/s speed= 149x       \n",
+      "video:0kB audio:69819kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.000483%\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
+    "import subprocess\n",
     "\n",
-    "response = json.loads(response)\n",
+    "def extract_audio_from_video(vidoe_path, audio_path):\n",
+    "  command = [\"ffmpeg\", \"-i\", vidoe_path, \"-vn\", audio_path]\n",
+    "  subprocess.run(command)\n",
     "\n",
-    "get_weather(response[\"lon\"], response[\"lon\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\\n  \"questions\": [\\n    {\\n      \"question\": \"What is the capital city of South Korea?\",\\n      \"answers\": [\\n        {\\n          \"answer\": \"Seoul\",\\n          \"correct\": true\\n        },\\n        {\\n          \"answer\": \"Busan\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Incheon\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Daegu\",\\n          \"correct\": false\\n        }\\n      ]\\n    },\\n    {\\n      \"question\": \"Which river flows through Seoul?\",\\n      \"answers\": [\\n        {\\n          \"answer\": \"Han River\",\\n          \"correct\": true\\n        },\\n        {\\n          \"answer\": \"Nakdong River\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Geum River\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Yeongsan River\",\\n          \"correct\": false\\n        }\\n      ]\\n    },\\n    {\\n      \"question\": \"What is the tallest building in Seoul?\",\\n      \"answers\": [\\n        {\\n          \"answer\": \"Lotte World Tower\",\\n          \"correct\": true\\n        },\\n        {\\n          \"answer\": \"N Seoul Tower\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"63 Building\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Seoul Sky\",\\n          \"correct\": false\\n        }\\n      ]\\n    },\\n    {\\n      \"question\": \"Which traditional market is famous in Seoul?\",\\n      \"answers\": [\\n        {\\n          \"answer\": \"Namdaemun Market\",\\n          \"correct\": true\\n        },\\n        {\\n          \"answer\": \"Gwangjang Market\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Dongdaemun Market\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Myeongdong Market\",\\n          \"correct\": false\\n        }\\n      ]\\n    },\\n    {\\n      \"question\": \"Which palace is located in the heart of Seoul?\",\\n      \"answers\": [\\n        {\\n          \"answer\": \"Gyeongbokgung Palace\",\\n          \"correct\": true\\n        },\\n        {\\n          \"answer\": \"Changdeokgung Palace\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Deoksugung Palace\",\\n          \"correct\": false\\n        },\\n        {\\n          \"answer\": \"Changgyeonggung Palace\",\\n          \"correct\": false\\n        }\\n      ]\\n    }\\n  ]\\n}'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "\n",
-    "function = {\n",
-    "    \"name\": \"create_quiz\",\n",
-    "    \"description\": \"function that takes a list of questions and answers and returns a quiz\",\n",
-    "    \"parameters\": {\n",
-    "        \"type\": \"object\",\n",
-    "        \"properties\": {\n",
-    "            \"questions\": {\n",
-    "                \"type\": \"array\",\n",
-    "                \"items\": {\n",
-    "                    \"type\": \"object\",\n",
-    "                    \"properties\": {\n",
-    "                        \"question\": {\n",
-    "                            \"type\": \"string\",\n",
-    "                        },\n",
-    "                        \"answers\": {\n",
-    "                            \"type\": \"array\",\n",
-    "                            \"items\": {\n",
-    "                                \"type\": \"object\",\n",
-    "                                \"properties\": {\n",
-    "                                    \"answer\": {\n",
-    "                                        \"type\": \"string\",\n",
-    "                                    },\n",
-    "                                    \"correct\": {\n",
-    "                                        \"type\": \"boolean\",\n",
-    "                                    },\n",
-    "                                },\n",
-    "                                \"required\": [\"answer\", \"correct\"],\n",
-    "                            },\n",
-    "                        },\n",
-    "                    },\n",
-    "                    \"required\": [\"question\", \"answers\"],\n",
-    "                },\n",
-    "            }\n",
-    "        },\n",
-    "        \"required\": [\"questions\"],\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "\n",
-    "llm = ChatOpenAI(\n",
-    "    temperature=0.1,\n",
-    ").bind(\n",
-    "    function_call={\n",
-    "        \"name\": \"create_quiz\",\n",
-    "    },\n",
-    "    functions=[\n",
-    "        function,\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "prompt = PromptTemplate.from_template(\"Make a quiz about {city}\")\n",
-    "\n",
-    "chain = prompt | llm\n",
-    "\n",
-    "response = chain.invoke({\"city\": \"Seoul\"})\n",
-    "\n",
-    "\n",
-    "response = response.additional_kwargs[\"function_call\"][\"arguments\"]\n",
-    "\n",
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'questions': [{'question': 'What is the capital city of South Korea?',\n",
-       "   'answers': [{'answer': 'Seoul', 'correct': True},\n",
-       "    {'answer': 'Busan', 'correct': False},\n",
-       "    {'answer': 'Incheon', 'correct': False},\n",
-       "    {'answer': 'Daegu', 'correct': False}]},\n",
-       "  {'question': 'Which river flows through Seoul?',\n",
-       "   'answers': [{'answer': 'Han River', 'correct': True},\n",
-       "    {'answer': 'Nakdong River', 'correct': False},\n",
-       "    {'answer': 'Geum River', 'correct': False},\n",
-       "    {'answer': 'Yeongsan River', 'correct': False}]},\n",
-       "  {'question': 'What is the tallest building in Seoul?',\n",
-       "   'answers': [{'answer': 'Lotte World Tower', 'correct': True},\n",
-       "    {'answer': 'N Seoul Tower', 'correct': False},\n",
-       "    {'answer': '63 Building', 'correct': False},\n",
-       "    {'answer': 'Seoul Sky', 'correct': False}]},\n",
-       "  {'question': 'Which traditional market is famous in Seoul?',\n",
-       "   'answers': [{'answer': 'Namdaemun Market', 'correct': True},\n",
-       "    {'answer': 'Gwangjang Market', 'correct': False},\n",
-       "    {'answer': 'Dongdaemun Market', 'correct': False},\n",
-       "    {'answer': 'Myeongdong Market', 'correct': False}]},\n",
-       "  {'question': 'Which palace is located in the heart of Seoul?',\n",
-       "   'answers': [{'answer': 'Gyeongbokgung Palace', 'correct': True},\n",
-       "    {'answer': 'Changdeokgung Palace', 'correct': False},\n",
-       "    {'answer': 'Deoksugung Palace', 'correct': False},\n",
-       "    {'answer': 'Changgyeonggung Palace', 'correct': False}]}]}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import json\n",
-    "json.loads(response)"
+    "extract_audio_from_video(\"files/video.mp4\", \"files/audio.mp3\")"
    ]
   }
  ],
